--- a/EkoopDataSync/App.config
+++ b/EkoopDataSync/App.config
@@ -1,8 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
-    </startup>
+  <startup> 
+      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+  </startup>
+
+  <appSettings>
+    <add key="Data Source" value="JJENRIQUEZ_ACER,1433"/>
+    <add key="Database" value="NEC_LOCALDB"/>
+    <add key="UserId" value="sa"/>
+    <add key="Password" value="ask4more"/>
+  </appSettings>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
